# Endian_Independent_Serialization

./: .gitignore  CMakeLists.txt
include/dd99/EIS1/: EIS1.hpp  eis_implementation.hpp  serializable_traits.hpp
include/dd99/EIS1/basic_type_support/: eis_container.hpp  eis_integral.hpp  eis_optional.hpp
tests/manual/: scratch.cpp
